--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ permalink: /home/
 <div class="callout large" style="height:20em; background:transparent">
   <div class="row column text-center">
     <br>
-    <h1>Welcome to ...</h1>
+    <h1>Welcome to Jie Ren's site</h1>
     <h2 class="subheader">My Simple Blog Layout</h2>
   </div>
 </div>
