--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ permalink: /home/
   <div class="row column text-center">
     <br>
     <h1>Welcome to Jie Ren's site</h1>
-    <h2 class="subheader">My Simple Blog Layout</h2>
+    <h2 class="subheader">I's posting my study notes and selected research here!</h2>
   </div>
 </div>
 
